crates/flowsdn-k8s/testdata/crs/flowsdnclusterwideenvoyconfigs/minimal.yaml
apiVersion: flowsdn.io/v1alpha1
kind: FlowsdnClusterwideEnvoyConfig
metadata:
  name: minimal
spec:
  resources: []
